...
    private(set) var currencies = Observable(element: [String]())

    /// The list of sorted currency rates after conversion.
    private(set) var sortedConvertedCurrencyRates = Observable(element: [(key: String, value: Double)]())

    /// The base currency used for conversion.
    var baseCurrency: String = "USD"

    /// The repository object responsible for communicating with the exchange rate API.
    private let repository: ExchangeRateRepositoryProtocol

    var loadingState: Observable<Bool> = Observable(element: false)

...
