...
        // Add the table view to the view hierarchy and constrain it to fill the entire view
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.register(DropdownCell.self, forCellReuseIdentifier: DropdownCell.identifier)
        tableView.layer.borderColor = #colorLiteral(red: 0, green: 0, blue: 0, alpha: 1).cgColor
        tableView.layer.borderWidth = 1
        tableView.alpha = 0
        tableView.accessibilityIdentifier = "DropdownTableView"

        // Set the table view's delegate and data source to this view
        tableView.delegate = self
        tableView.dataSource = self
    }

...
